mudanca nas cores

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="#" class="nav__logo">Thiago</a>
             </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -26,6 +25,7 @@
                     <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                     <li class="nav__item"><a href="#work" class="nav__link">Certification</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="#Projetos" class="nav__link">Projetos</a></li>
                 </ul>
             </div>
             <div class="nav__toggle" id="nav-toggle">
@@ -52,8 +52,7 @@
                         <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
                     </mask>
                     <g mask="url(#mask0)">
-                        <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
-                        <image class="home__blob-img" x="50" y="105" href="assets/img/foto.vfund2.png"/>
+                        <image class="home__blob-img"  href="assets/img/Black_coders_wallpaper_programmer-removebg-preview.png"/>
                     </g>
                 </svg>
             </div>
@@ -61,7 +60,7 @@
 
         <!--===== ABOUT =====-->
         <section class="about section" id="about">
-            <h2 class="section-title">About</h2>
+            <h2 class="section-zuf">ABOUT</h2>
             <div class="about__container bd-grid">
                 <div class="about__img">
                     <img src="assets/img/MelRibeiro - Overview.gif" alt="Foto de Thiago">
@@ -80,7 +79,7 @@
 
         <!--===== SKILLS =====-->
         <section class="skills section" id="skills">
-            <h2 class="section-title">Skills</h2>
+            <h2 class="section-zuf">Skills</h2>
             <div class="skills__container bd-grid">
                 <div>
                     <h2 class="skills__subtitle">Professional Skills</h2>
@@ -143,7 +142,7 @@
 
         <!--===== WORK =====-->
         <section class="work section" id="work">
-            <h2 class="section-title">Certification</h2>
+            <h2 class="section-zuf">Certification</h2>
             <div class="work__container bd-grid">
                 <a href="https://www.credly.com/badges/f63407b5-0469-4d4e-8fd5-2fd1b947fba9/linked_in?t=shhmp7" class="work__img" target="_blank">
                     <img src="assets/img/check point.jpeg" alt="Certificação Check Point">
@@ -170,7 +169,7 @@
 
         <!--===== CONTACT =====-->
         <section class="contact section" id="contact">
-            <h2 class="section-title">Contato</h2>
+            <h2 class="section-zuf">Contato</h2>
             <div class="contact__container bd-grid">
                 <form action="/enviar-email" method="POST" class="contact__form">
                     <input type="text" name="nome" placeholder="Nome" class="contact__input" required>
@@ -182,15 +181,6 @@
         </section>
     </main>
 
-    <!--===== FOOTER =====-->
-    <footer class="footer">
-        <p class="footer__title">Thiago</p>
-        <div class="footer__social">
-            <a href="#" class="footer__icon"><i class='bx bxl-github'></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-linkedin'></i></a>
-        </div>
-        <p class="footer__copy">&#169; Thiago. All rights reserved</p>
-    </footer>
 
     <!--===== SCROLL REVEAL =====-->
     <script src="https://unpkg.com/scrollreveal"></script>
