--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap">
-
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css' rel='stylesheet'>
     <title>Portfolio website complete</title>
@@ -16,8 +14,7 @@
     <!--===== HEADER =====-->
     <header class="l-header">
         <nav class="nav bd-grid">
-            <div>
-            </div>
+            <div></div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
@@ -25,7 +22,6 @@
                     <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                     <li class="nav__item"><a href="#work" class="nav__link">Certification</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
-                    <li class="nav__item"><a href="#Projetos" class="nav__link">Projetos</a></li>
                 </ul>
             </div>
             <div class="nav__toggle" id="nav-toggle">
@@ -38,7 +34,9 @@
         <!--===== HOME =====-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Thiago</span><br>Developer Back-End</h1>
+                <h1 class="home__title">
+                    Hi,<br>I'am <span class="home__title-color">Thiago</span><br>Developer Back-End
+                </h1>
                 <a href="#" class="button">Contact</a>
             </div>
             <div class="home__social">
@@ -52,7 +50,7 @@
                         <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
                     </mask>
                     <g mask="url(#mask0)">
-                        <image class="home__blob-img"  href="assets/img/Black_coders_wallpaper_programmer-removebg-preview.png"/>
+                        <image class="home__blob-img" href="assets/img/Black_coders_wallpaper_programmer-removebg-preview.png"/>
                     </g>
                 </svg>
             </div>
@@ -67,14 +65,15 @@
                 </div>
                 <div>
                     <h2 class="about__subtitle">I'am Thiago</h2>
-                    <p class="about__text">Back-End Developer passionate about creating robust and efficient solutions.
-                         With experience in various languages, frameworks, and technologies, my specialty is transforming complex requirements into scalable and secure systems.
-                          I adhere to Clean Code (CC) best practices and strictly follow security rules commonly adopted by back-end developers,
-                           such as OWASP (Open Web Application Security Project) and CSP (Content Security Policy).
-                           I have experience in API development and integration, as well as knowledge in monitoring tools like Zabbix and Grafana. Currently, I am pursuing a degree in Software Engineering at Anhanguera.
+                    <p class="about__text">
+                        Back-End Developer passionate about creating robust and efficient solutions.
+                        With experience in various languages, frameworks, and technologies, my specialty is transforming complex requirements into scalable and secure systems.
+                        I adhere to Clean Code (CC) best practices and strictly follow security rules commonly adopted by back-end developers, such as OWASP (Open Web Application Security Project) and CSP (Content Security Policy).
+                        I have experience in API development and integration, as well as knowledge in monitoring tools like Zabbix and Grafana. Currently, I am pursuing a degree in Software Engineering at Anhanguera.
                     </p>
                 </div>
             </div>
+            
         </section>
 
         <!--===== SKILLS =====-->
@@ -135,37 +134,117 @@
                         </div>
                     </div>
                 </div>
-                
                 <img src="assets/img/Premium Vector _ Software development, programming language, coding.jpeg" alt="Skills Image" class="skills__img">
             </div>
         </section>
 
-        <!--===== WORK =====-->
-        <section class="work section" id="work">
-            <h2 class="section-zuf">Certification</h2>
-            <div class="work__container bd-grid">
-                <a href="https://www.credly.com/badges/f63407b5-0469-4d4e-8fd5-2fd1b947fba9/linked_in?t=shhmp7" class="work__img" target="_blank">
-                    <img src="assets/img/check point.jpeg" alt="Certificação Check Point">
-                </a>
-                <a href="https://cursos.alura.com.br/certificate/30ec28b8-6925-46a0-bfa4-01d7b9b68af5?lang" class="work__img">
-                    <img src="assets/img/alura.jpeg" alt="Certificação Alura">
-                </a>
-                <a href="https://www.credly.com/badges/f63407b5-0469-4d4e-8fd5-2fd1b947fba9/linked_in?t=shhmp7" class="work__img">
-                    <img src="assets/img/checkpoint sales.jpeg" alt="Certificação Checkpoint Sales">
-                </a>
-                <a href="https://credly.com/badges/36151f3b-d0e6-4011-a3db-6be656e544aa" class="work__img">
-                    <img src="assets/img/fortnet.jpeg" alt="Certificação Fortnet">
-                </a>
-                <a href="https://cursos.alura.com.br/certificate/30ec28b8-6925-46a0-bfa4-01d7b9b68af5?lang" class="work__img">
-                    <img src="assets/img/Thiago Giovanni Bosco De Carvalho - Curso Python_ avance na Orientação a Objetos e consuma API - Alura_page-0001.jpg" alt="Certificação Fortnet">
-                </a>
-                <a href="https://cursos.alura.com.br/certificate/c9551931-0a28-408e-acfd-77a5f0387dfc?lang" class="work__img">
-                    <img src="assets/img/_Git e GitHub_ Alura_page-0001.jpg" alt="Certificação Fortnet">
-                </a>
-
+<!--===== WORK =====-->
+<section class="work section" id="work">
+    <h2 class="section-zuf">Certification</h2>
+    <div class="carousel">
+        <div class="carousel__prev">
+            <i class='bx bx-chevron-left'></i>
+        </div>
+        <div class="carousel__next">
+            <i class='bx bx-chevron-right'></i>
+        </div>
+        <div class="carousel__body">
+            <div class="carousel__slider">
+                <div class="carousel__slider__item">
+                    <div class="item__3d-frame">
+                        <div class="item__3d-frame__box">
+                            <a href="https://cursos.alura.com.br/user/thiago-carvalho789/course/git-github-compartilhando-colaborando-projetos/certificate" target="_blank">
+                                <img src="assets/img/compartilhando e colaborando em projetos.png" alt="Certificação Check Point">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__slider__item">
+                    <div class="item__3d-frame">
+                        <div class="item__3d-frame__box">
+                            <a href="https://cursos.alura.com.br/user/thiago-carvalho789/course/python-analise-dados-sql/certificate" target="_blank">
+                                <img src="assets/img/Analize de dados com sql.png" alt="Certificação Alura">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__slider__item">
+                    <div class="item__3d-frame">
+                        <div class="item__3d-frame__box">
+                            <a href="https://cursos.alura.com.br/user/thiago-carvalho789/course/python-aplicando-orientacao-objetos/certificate" target="_blank">
+                                <img src="assets/img/aplicando a Orientação a Objetos.png" alt="Certificação Alura">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__slider__item">
+                    <div class="item__3d-frame">
+                        <div class="item__3d-frame__box">
+                            <a href="https://cursos.alura.com.br/user/thiago-carvalho789/course/python-avance-orientacao-objetos-consuma-api/certificate" target="_blank">
+                                <img src="assets/img/avance na Orientação a Objetos e consuma API.png" alt="Certificação Alura">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__slider__item">
+                    <div class="item__3d-frame">
+                        <div class="item__3d-frame__box">
+                            <a href="https://cursos.alura.com.br/user/thiago-carvalho789/course/python-crie-sua-primeira-aplicacao/certificate" target="_blank">
+                                <img src="assets/img/crie a sua primeira aplicação.png" alt="Certificação Alura">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__slider__item">
+                    <div class="item__3d-frame">
+                        <div class="item__3d-frame__box">
+                            <a href="https://cursos.alura.com.br/user/thiago-carvalho789/course/scripting-automacao-tarefas-python-criacao-pipelines-jenkins/certificate" target="_blank">
+                                <img src="assets/img/automação de tarefas com Python e criação de Pipelines no Jenkins.png" alt="Certificação Alura">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__slider__item">
+                    <div class="item__3d-frame">
+                        <div class="item__3d-frame__box">
+                            <a href="https://cursos.alura.com.br/user/thiago-carvalho789/course/string-python-extraindo-informacoes-url/certificate" target="_blank">
+                                <img src="assets/img/extraindo informações de uma URL.png" alt="Certificação Alura">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__slider__item">
+                    <div class="item__3d-frame">
+                        <div class="item__3d-frame__box">
+                            <a href="https://cursos.alura.com.br/user/thiago-carvalho789/course/string-python-extraindo-informacoes-url/certificate" target="_blank">
+                                <img src="assets/img/check point.jpeg" alt="Certificação Alura">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__slider__item">
+                    <div class="item__3d-frame">
+                        <div class="item__3d-frame__box">
+                            <a href="https://cursos.alura.com.br/user/thiago-carvalho789/course/string-python-extraindo-informacoes-url/certificate" target="_blank">
+                                <img src="assets/img/checkpoint sales.jpeg" alt="Certificação Alura">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__slider__item">
+                    <div class="item__3d-frame">
+                        <div class="item__3d-frame__box">
+                            <a href="https://cursos.alura.com.br/user/thiago-carvalho789/course/string-python-extraindo-informacoes-url/certificate" target="_blank">
+                                <img src="assets/img/fortnet.jpeg" alt="Certificação Alura">
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
             </div>
-        </section>
+        </div>
+    </div>
+</section>
 
         <!--===== CONTACT =====-->
         <section class="contact section" id="contact">
@@ -180,7 +259,6 @@
             </div>
         </section>
     </main>
-
 
     <!--===== SCROLL REVEAL =====-->
     <script src="https://unpkg.com/scrollreveal"></script>
