--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap">
+    
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css' rel='stylesheet'>
     <title>Portfolio website complete</title>
 </head>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
 <body>
     <!--===== HEADER =====-->
     <header class="l-header">
@@ -134,9 +137,13 @@
                         </div>
                     </div>
                 </div>
-                <img src="assets/img/Premium Vector _ Software development, programming language, coding.jpeg" alt="Skills Image" class="skills__img">
-            </div>
-        </section>
+                <div id="terminal">
+                    <div id="terminal-content"></div>
+            </div>  
+        </div>
+    </section>
+    
+    <script src="typed-animation.js"></script>
 
 <!--===== WORK =====-->
 <section class="work section" id="work">
